# musicbox

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  requirements.txt  schema.py  test.py  top.json  vite.config.ts
.github/workflows/: release.yml
common/: models.py  pydantics.py  router.py  utils.py
config/: create_app.py  settings.py
migrations/models/: 0_20231217145226_init.py
modules/music/: apis.py  models.py
src/: App.css  App.tsx  crawler.ts  main.tsx  types.ts  useMediaQuery.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_create_initial_tables.sql  0001_add_play_id_to_music.sql  0002_update_music_file_path_last_play.sql  0003_update_playlist_music_position_null.sql
src-tauri/src/: commands.rs  db.rs  handle_music.rs  lib.rs  main.rs  model.rs  music.rs  music_cache.rs  my_util.rs  playlist.rs  updater.rs
src/components/Add2Playlist/: index.tsx
src/components/BottomNav/: index.tsx
src/components/FloatPlayer/: index.css  index.tsx
src/components/LyricScroller/: index.tsx
src/components/MessageHook/: index.tsx
src/components/MusicList/: index.tsx
src/components/PlayerBar/: index.tsx
src/pages/: Player.css  Player.tsx  Playlist.css  Playlist.tsx  Search.tsx
src/pages/Setting/: About.tsx  PlaylistCacheManage.tsx  Privacy.tsx  cacheManage.tsx  index.tsx
src/store/: index.ts
src/util/: cache.ts  crawler.ts  index.ts  updater.tsx
web/: package.json
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/LyricScroller/: index.tsx
web/src/components/PlayerBar/: index.tsx
