[package]
name = "musicbox"
version = "1.1.4"
description = "MusicBox multi-platform by Tauri"
authors = ["Kris"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musicbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-http = { version = "2", features = [ "json" ] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.0"
base64 = "0.22.1"
semver = { version = "1.0.26", features = ["serde"] }
tokio = { version = "1.47.1", features= ["full"] }
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
